--- a/style.css
+++ b/style.css
@@ -17,33 +17,34 @@ body {
 .paper {
   background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
   background-size: 500px;
+  
   background-position: center center;
-  padding: 20px 100px;
+  padding: 30px 100px;
 /*  min-width: 800px; */
+  /* max-height: 40vh; */
   
   transform: rotateZ(-5deg);
-  box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
+  box-shadow: 10px 15px 20px 20px rgba(0,0,0,0.5);
   
   position: absolute;
+  /* border-radius: 15px; */
 }
 
-.paper.heart {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  padding: 0;
-  border-radius: 50%;
-}
+
 
 .paper.image {
   padding: 10px;
+  
 }
+
+
 .paper.image p {
-  font-size: 30px;
+  /* padding: 0px; */
+  font-size: 70px;
 }
 
 img {
-  max-height: 200px;
+  max-height: 30vh;
   width: 100%;
   user-select: none;
 }
@@ -64,7 +65,17 @@ img {
 
 p {
   font-family: 'Zeyada';
-  font-size: 50px;
+  font-size: 85px;
+  color: rgb(0,0,100);
+  opacity: 0.75;
+  user-select: none;
+  
+  filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
+}
+
+.p1{
+  font-family: 'Zeyada';
+  font-size: 110px;
   color: rgb(0,0,100);
   opacity: 0.75;
   user-select: none;
